[gd_scene load_steps=6 format=3]

[ext_resource type="Script" path="res://tests/e2e/test_physics_params.gd" id="1_script"]

[sub_resource type="BoxMesh" id="BoxMesh_flat"]
size = Vector3(30, 0.5, 30)

[sub_resource type="StandardMaterial3D" id="Mat_flat"]
albedo_color = Color(0.3, 0.4, 0.3, 1)

[sub_resource type="BoxShape3D" id="BoxShape_flat"]
size = Vector3(30, 0.5, 30)

[sub_resource type="BoxMesh" id="BoxMesh_slope"]
size = Vector3(6, 0.3, 12)

[sub_resource type="StandardMaterial3D" id="Mat_slope"]
albedo_color = Color(0.5, 0.35, 0.2, 1)

[sub_resource type="BoxShape3D" id="BoxShape_slope"]
size = Vector3(6, 0.3, 12)

[node name="PhysicsParamTest" type="Node3D"]
script = ExtResource("1_script")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866, -0.354, 0.354, 0, 0.707, 0.707, -0.5, -0.612, 0.612, 0, 10, 0)
light_energy = 1.2
shadow_enabled = true

[node name="FlatGround" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0)

[node name="Mesh" type="MeshInstance3D" parent="FlatGround"]
mesh = SubResource("BoxMesh_flat")
surface_material_override/0 = SubResource("Mat_flat")

[node name="Collision" type="CollisionShape3D" parent="FlatGround"]
shape = SubResource("BoxShape_flat")

[node name="Slope" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.866, 0.5, 0, -0.5, 0.866, 0, 4, 0)

[node name="Mesh" type="MeshInstance3D" parent="Slope"]
mesh = SubResource("BoxMesh_slope")
surface_material_override/0 = SubResource("Mat_slope")

[node name="Collision" type="CollisionShape3D" parent="Slope"]
shape = SubResource("BoxShape_slope")

[node name="SteepSlope" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866, 0, -0.866, 0.5, 0, 4, 5)
visible = false

[node name="Mesh" type="MeshInstance3D" parent="SteepSlope"]
mesh = SubResource("BoxMesh_slope")
surface_material_override/0 = SubResource("Mat_slope")

[node name="Collision" type="CollisionShape3D" parent="SteepSlope"]
shape = SubResource("BoxShape_slope")

[node name="StatusLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, -5)
text = "PHYSICS PARAMETER TESTS
R = restart, SPACE = skip, ESC = quit"
font_size = 48
outline_size = 8

[node name="ResultsLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 3, 0)
text = ""
font_size = 32
outline_size = 4

[node name="DebugLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 3, 0)
text = "Debug info..."
font_size = 24
outline_size = 4
